--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
+@import './fonts.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 *{
-    color: #fff;
-}
-
-body{
-    background-color: #111;
+    font-family: 'Gilroy', sans-serif;
 }
